# hlri-ioa

./: NOTICE.txt
isaac_sim/: OMY_stage.usd  OMY_standalone.py  README.md
runtime/: policy_runner.py
runtime/examples/omy_f3m_ee_policy_servo/: package.xml  setup.cfg  setup.py
runtime/examples/omy_f3m_ee_policy_servo/launch/: ee_policy_servo.launch.py  omy_f3m_all.launch.py
runtime/examples/omy_f3m_ee_policy_servo/omy_f3m_ee_policy_servo/: __init__.py  ee_policy_servo_node.py
runtime/examples/rby1_ee_policy/: package.xml  setup.cfg  setup.py
runtime/examples/rby1_ee_policy/rby1_ee_policy/: __init__.py  ee_pose_publisher_node.py
runtime/examples/rby1_ee_policy/resource/: ee_bc_policy_1.pt
training/: README.md  build_ee_dataset.py  test_bc_policy.py  train_bc_policy.py
